--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,21 +1,34 @@
-/*
-http://www.freshdesignweb.com/beautiful-registration-form-with-html5-and-css3.html
-*/
+/**
+ * Custom css for the form to send emails	
+ */
 
-.form{
-	background:#f1f1f1; width:600px; margin:0 auto; padding-left:50px; padding-top:20px; padding-right:50px; padding-bottom: 25px; ;
+.hidden {
+	style="display:none;"	
 }
-.form fieldset{border:0px; padding:0px; margin:0px;}
-.form p.contact { font-size: 12px; margin:0px 0px 10px 0;line-height: 14px; font-family:Arial, Helvetica;}
 
-.form input[type="text"] { width: 540px; }
-.form input[type="email"] { width: 540px; }
-.form input[type="password"] { width: 540px; }
-.form textarea { width: 540px; height: 200px;}
-.form input.birthday{width:60px;}
-.form input.birthyear{width:120px;}
+.error {
+	display: inline;
+	color: #cc0000;
+	width: 100%;
+	text-align: center;
+}
+
+.success {
+	display: inline;
+	color: #00b200;
+	width: 100%;
+	text-align: center;
+}
+
+.form h1 {color: #4b8df9; text-align: center;}
+
+.form {
+	background:#f1f1f1; width:600px; margin:0 auto; padding-top:5px; padding-left:50px; padding-right:50px;
+}
+
+.form input { width: 540px; }
+.form textarea { width: 540px; height: 150px;}
 .form label { color: #000; font-weight:bold;font-size: 12px;font-family:Arial, Helvetica; }
-.form label.month {width: 135px;}
 .form input, textarea { background-color: rgba(255, 255, 255, 0.4); border: 1px solid rgba(122, 192, 0, 0.15); padding: 7px; font-family: Keffeesatz, Arial; color: #4b4b4b; font-size: 14px; -webkit-border-radius: 5px; margin-bottom: 15px; margin-top: -10px; }
 .form input:focus, textarea:focus { border: 1px solid #ff5400; background-color: rgba(255, 255, 255, 1); }
 .form .select-style {
@@ -41,62 +54,5 @@ http://www.freshdesignweb.com/beautiful-registration-form-with-html5-and-css3.ht
 .form .gender {
   width:410px;
   }
-.form input.buttom{background: #4b8df9; display: inline-block; color: #fbf7f7; text-decoration: none; font-weight: bold; line-height: 1; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-shadow: 0 1px 3px #999; -webkit-box-shadow: 0 1px 3px #999; box-shadow: 0 1px 3px #999; text-shadow: 0 -1px 1px #222; border: none; position: relative; cursor: pointer; font-size: 14px; font-family:Verdana, Geneva, sans-serif;}
-.form input.buttom:hover	{ background-color: #2a78f6; }
-
-.headertext {
-	font-weight: bold;
-	font-size: 45px;
-	color: #2a78f6;
-}
-
-.actionTitle {
-	font-weight: bold;
-	font-size: 25px;
-	color: #2a78f6;
-	text-align: center;
-}
-
-.actionTitleWarning {
-	font-weight: bold;
-	font-size: 25px;
-	color: #ff0000;
-	text-align: center;
-}
-
-.noteLimit {
-	border: 2px solid rgba(0, 255, 0, 0.15);
-	padding-left: 15px;	
-}
-
-.noteValues {
-	color: #5C5C61;
-}
-
-.footer {
-	padding: 50px;
-}
-
-/* unvisited link */
-a:link {
-color: #FF0000;
-text-decoration: underline;
-}
-
-/* visited link */
-a:visited {
-color: #008000;
-text-decoration: underline;
-}
-
-/* mouse over link */
-a:hover {
-color: #FF00FF;
-text-decoration: underline;
-}
-
-/* selected link */
-a:active {
-color: #0000FF;
-text-decoration: underline;
-}
+.form input.button {width: 25%; background: #4b8df9; display: inline-block; color: #fbf7f7; text-decoration: none; font-weight: bold; line-height: 1; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-shadow: 0 1px 3px #999; -webkit-box-shadow: 0 1px 3px #999; box-shadow: 0 1px 3px #999; text-shadow: 0 -1px 1px #222; border: none; position: relative; cursor: pointer; font-size: 14px; font-family:Verdana, Geneva, sans-serif;}
+.form input.button:hover	{ width: 25%; background-color: #2a78f6; }
